--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.20",
     "mysql2": "^2.0.2",
     "pg": "^8.2.1",
     "pg-promise": "^10.5.7",
